[tool.poetry]
name = "fresca"
version = "0.0.1-dev"
description = ""
authors = ["Jeremy Lucas <me@jerluc.com>"]
readme = "README.md"

[tool.poetry.scripts]
fresca = "fresca.__main__:CLI"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
